<resources>
    <string name="app_name">窗口天气</string>
    <string name="manage_area">城市管理</string>
    <string name="search_area">城市名称</string>
    <string name="test_string">测试用例</string>
    <string name="test_number">100℃</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="dialog_title">“窗口天气”是提供天气信息查询服务的应用。为提供上述功能，本应用需要联网，并获取以下权限：</string>
    <string name="dialog_text1">用于获取地理位置，获取天气信息</string>
    <string name="dialog_text2">用于缓存图片和城市列表信息</string>
    <string name="dialog_text3">用于告知当前网络状态</string>
    <string name="dialog_end">点击“同意”，即视为同意上述内容及</string>
    <string name="privacyText">
\n
更新时间：2023年7月20日
\n
\n生效时间：2023年7月20日
\n
\n本软件尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本软件会按照本隐私权政策的规定使用和披露您的个人信息。但本软件将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本软件不会将这些信息对外披露或向第三方提供。本软件会不时更新本隐私权政策。您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本软件服务使用协议不可分割的一部分。\n
\n1. 如何搜集您的信息？\n
\n本软件仅在于局域网内部使用，需要配合硬件设备一起使用。在提供服务时，无需注册账号，所以不需要用户提供任何个人信息。
\n为了您使用的便利性，本软件需要提供权限和使用信息包括:
\n1.1 您需要提供的权限
\n(1) 访问确切位置信息（使用 GPS 和网络进行定位）
\n主要用于将位置信息定位到服务器并返回定位地区的天气数据
\n(2) 读取通话状态和移动网络信息。
\n主要用于告知用户当前处于什么网络状态，方便用户知晓是否使用流量
\n1.2 您在使用本应用的过程中，主动获取的信息
\n(1) 手机移动网络信息：会收集当前网络状态，是否处于移动网络或者WIFI连接，是否有网络能够进行访问
\n(2) 手机中的确切位置信息：能通过当前选择的城市进行位置判断并返回相应的天气数据
\n(3) 不会收集您的个人信息，也完全不会将这些通过互联网向外传递。\n
\n2. 如何使用您的信息\n
\n可能将上述收集的信息用作以下用途：
\n(1) 判断用户当前的网络状态
\n(2) 提供准确的天气信息
\n(3) 不会向任何无关第三方提供、出售、出租、分享或交易项目信息。\n
\n3.信息存储和交换\n
\n本软件收集的有关您的信息和资料将保存在您自己本手机。这些信息和资料不会传送至任何互联网服务上，不会在互联网上被访问、存储和展示。\n
\n4. 承诺\n
\n(1)不会向您展示任何形式的广告；
\n(2)除了在您的自己本手机外，不会在任何地方复制和存储您的任何形式的信息；
\n(3)在任何时候、任何情况下都不会向任何第三方出售您的个人信息，只会在法律允许的范围内使用根据本协议获得的信息。会制定严格的政策保护您的个人信息，不会将您的这些信息对外公开或向第三方提供。\n
\n5.本隐私政策的更改\n
\n如果决定更改隐私政策，会在本政策中以及认为适当的位置发布这些更改，以便您了解如何收集项目信息。
\n感谢您花时间了解的隐私政策！将尽全力保护您的个人信息和合法权益，再次感谢您的信任。
\n
    </string>
    <string name="userText">
\n        《用户协议》是用户（指使用、浏览本服务的个人或组织，以下或称“您”）与窗口天气（以下或称“我们”）之间关于您登录、使用“窗口天气”服务所订立的协议，描述窗口天气与您之间关于“窗口天气”服务相关方面的权利义务。在此特别提醒您认真阅读、充分理解本协议中各条款，包括免除或者限制“窗口天气”责任的免责条款及对您的权利限制条款。
\n        请您审慎阅读并选择接受或不接受本协议。除非您接受本协议所有条款，否则您无权登录或使用“窗口天气”所提供的相关服务。您的登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。\n
\n        一、使用规则\n
\n        1、您充分了解并同意，窗口天气仅为您提供信息分享、传送及获取的窗口天气，您必须为自己使用产品的一切行为负责，包括您所传送的任何内容以及由此产生的任何结果。您应对窗口天气中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。窗口天气无法且不会对因用户行为而导致的任何损失或损害承担责任。
\n        2、您在窗口天气服务中或通过窗口天气所传送的任何内容并不反映窗口天气的观点或政策，窗口天气对此不承担任何责任。
\n        3、您充分了解并同意，窗口天气提供基于用户关系网的点对点即时分享服务，您须对在窗口天气上信息的真实性、合法性、有效性承担全部责任，您不得冒充他人；不得利用他人的名义传播任何信息；不得恶意使用窗口天气导致其他用户误认；否则窗口天气有权立即停止提供服务，并由您独自承担由此而产生的一切法律责任。
\n        4、您充分了解并同意，窗口天气对您在窗口天气上发布的任何公开信息具有免费使用权，包括窗口天气时景。使用范围包括，窗口天气应用内以及应用外其他法律允许的范围和区域。
\n        5、您须对在窗口天气上所传送信息的真实性、合法性、无害性、有效性等全权负责，与您所传播的信息相关的任何法律责任由您自行承担，与窗口天气无关。
\n        6、窗口天气保留因业务发展需要，单方面对本服务的全部或部分服务内容在任何时候不经任何通知的情况下变更、暂停、限制、终止或撤销窗口天气服务的权利，您需承担此风险。窗口天气更新相应条款后，用户可重新下载安装本软件或在窗口天气官方网站查阅最新版协议条款。在窗口天气修改《协议》条款后，如果用户不接受修改后的条款，请立即停止使用窗口天气提供的软件和服务，用户继续使用将被视为已接受了修改后的协议。
\n        7、窗口天气提供的服务中可能包括广告，您同意在使用过程中显示窗口天气和第三方供应商、合作伙伴提供的广告。
\n        8、窗口天气可依其合理判断，对违反有关法律法规或本协议约定；或侵犯、妨害、威胁任何人权利或安全的内容，或者假冒他人的行为，窗口天气有权依法停止传输任何前述内容，并有权依其自行判断对违反本条款的任何人士采取适当的法律行动，包括但不限于，从窗口天气服务中删除具有违法性、侵权性、不当性等内容，终止违反者的成员资格，阻止其使用窗口天气全部或部分服务，并且依据法律法规保存有关信息并向有关部门报告等。如经司法部门确认窗口天气上述判断有误，用户同意窗口天气不承担由此造成的一切后果。
\n        9、窗口天气保留在任何时候通过为您提供本“软件”替换、修改、升级版本的权利以及为替换、修改或升级收取费用的权利。本“软件”为用户默认开通“升级提示”功能，视用户使用的“软件”版本差异，窗口天气提供给用户自行选择是否需要开通此功能。软件新版本发布后，窗口天气不保证旧版本软件的继续可用。窗口天气保留因业务发展需要，单方面对软件的部分功能效果进行改变或进行限制，用户需承担此风险。\n
\n        二、用户权利及义务\n
\n        1、窗口天气的所有权归窗口天气所有，用户完成申请下载后，获得窗口天气的使用权，禁止赠与、借用、租用、转让或售卖。窗口天气因经营需要，有权关闭用户使用窗口天气的权利。
\n        2、用户有权更改、删除在窗口天气上的个人资料、信息及传送内容等，但需注意，删除有关信息的同时也会删除任何您储存在系统中的文字和图片。用户需自行承担相关风险。
\n        3、用户应遵守本协议的各项条款，正确、适当地使用本服务，如因用户违反本协议中的任何条款，窗口天气有权依据协议终止对违约用户提供服务。\n
\n        三、用户承诺与保证\n
\n        1、不为任何非法目的而使用本网络服务系统；不以任何形式使用窗口天气服务侵犯窗口天气以及入驻第三方窗口天气的商业利益，包括并不限于发布非经窗口天气许可的商业广告；不得利用窗口天气网络服务系统进行任何可能对互联网或移动网正常运转造成不利影响的行为；
\n        2、不利用窗口天气提供的服务从事以下活动：
\n        （1）未经允许，进入计算机信息网络或者使用计算机信息网络资源的；
\n        （2）未经允许，对计算机信息网络功能进行删除、修改或者增加的；
\n        （3）未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加的；
\n        （4） 故意制作、传播计算机病毒等破坏性程序的；
\n        （5）其他危害计算机信息网络安全的行为。
\n        （6）如因用户利用窗口天气提供的网络服务进行了侵犯了任何第三方的合法权益（包括但不限于专利权、商标权、著作权及著作权邻接权、肖像权、隐私权、名誉权等）的行为而导致窗口天气或窗口天气第三方遭受任何投诉、举报、质询、索赔、诉讼；或者因此遭受任何名誉、声誉或者财产上的损失，用户应积极采取一切可能的措施，以保证窗口天气或者窗口天气第三方免受上述索赔、诉讼的影响，同时用户应对窗口天气或者窗口天气第三方因此遭受的直接及间接经济损失负有全部的损害赔偿责任。
\n        3、不利用窗口天气传播如下内容：
\n        （1）反对宪法所确定的基本原则的；
\n        （2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
\n        （3）损害国家荣誉和利益的；
\n        （4）煽动民族仇恨、民族歧视，破坏民族团结的；
\n        （5）破坏国家宗教政策，宣扬邪教和封建迷信的；
\n        （6）散布谣言，扰乱社会秩序，破坏社会稳定的；
\n        （7）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
\n        （8）侮辱或者诽谤他人，侵害他人合法权益的；
\n        （9）含有法律、行政法规禁止的其他内容的信息。
\n        4、不会请求、收集、索取或以其他方式获取对窗口天气帐号、密码或其他身份验证凭据的访问权。\n
\n        四、免责声明\n
\n        1、用户违反本协议或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户同意赔偿窗口天气，并使之免受损害。
\n        2、用户因第三方如电信部门的通讯线路故障、技术问题、网络、电脑故障、系统不稳定性及其他各种不可抗力原因而遭受的一切损失，窗口天气及合作单位不承担责任。
\n        3、因技术故障等不可抗事件影响到服务的正常运行的，窗口天气承诺在第一时间进行修复，但用户因此而遭受的一切损失，窗口天气不承担责任。
\n        4、本服务同大多数互联网服务一样，受包括但不限于用户原因、网络服务质量、社会环境等因素的差异影响，可能受到各种安全问题的侵扰，如他人利用用户的资料，造成现实生活中的骚扰；用户下载安装的其它软件或访问的其他网站中含有病毒，威胁到用户的计算机信息和数据的安全，继而影响本服务的正常使用等等。用户应加强信息安全及使用者资料的保护意识，要注意加强密码保护，以免遭致损失和骚扰。
\n        5、用户理解并同意，使用本服务因涉及Internet服务，可能会受到各个环节不稳定因素的影响。因此，本服务存在因不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机以及其他，任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险。用户须承担以上风险，窗口天气不作担保。对因此导致用户不能发送和接受阅读信息、或接发错信息，窗口天气不承担任何责任。
\n        6、用户理解并同意，在使用本服务过程中存在有来自任何他人的包括威胁性的、诽谤性的、令人反感的或非法的内容或行为或对他人权利的侵犯（包括知识产权）的匿名或冒名的信息的风险，用户须承担以上风险，窗口天气对本服务不作任何类型的担保，不论是明确的或隐含的，包括所有有关信息真实性、适当性、适于某一特定用途、所有权和非侵权性的默示担保和条件，对因此导致任何因用户不正当或非法使用服务产生的直接、间接、偶然、特殊及后续的损害，不承担任何责任。
\n        7、窗口天气定义的信息内容包括：文字、软件、声音、相片、录像、图表；在广告中全部内容；窗口天气为用户提供的商业信息，所有这些内容受版权、商标权、和其它知识产权和所有权法律的保护。所以，用户只能在窗口天气和广告商授权下才能使用这些内容，而不能擅自复制、修改、编纂这些内容、或创造与内容有关的衍生产品。
\n        8、在任何情况下，窗口天气均不对任何间接性、后果性、惩罚性、偶然性、特殊性或刑罚性的损害，包括因用户使用窗口天气服务而遭受的利润损失，承担责任（即使窗口天气已被告知该等损失的可能性亦然）。尽管本协议中可能含有相悖的规定，窗口天气对您承担的全部责任，无论因何原因或何种行为方式，始终不超过您在成员期内因使用窗口天气服务而支付给窗口天气的费用（如有）。
\n        9、就下列相关事宜的发生，窗口天气不承担任何法律责任：
\n        （1）窗口天气根据法律规定或相关政府的要求提供您的个人信息；
\n        （2）由于您窗口天气赠与他人或与他人共享使用，由此导致的任何个人信息的泄漏，或其他非因窗口天气原因导致的个人信息的泄漏；
\n        （3）任何第三方根据窗口天气各服务条款及声明中所列明的情况使用您的个人信息，由此所产生的纠纷；
\n        （4）任何由于黑客攻击、电脑病毒侵入或政府管制而造成的暂时性网站关闭；
\n        （5）因不可抗力导致的任何后果；
\n        （6）窗口天气在各服务条款及声明中列明的使用方式或免责情形。\n
\n        五、知识产权\n
\n        1、知识产权声明
\n        （1）本“软件”是由窗口天气开发。“软件”的一切版权、商标权、专利权、商业秘密等知识产权，以及与“软件”相关的所有信息内容，包括但不限于：文字表述及其组合、图标、图饰、图表、色彩、界面设计、版面框架、有关数据、印刷材料、或电子文档等均受中华人民共和国著作权法、商标法、专利法、反不正当竞争法和相应的国际条约以及其他知识产权法律法规的保护，除涉及第三方授权的软件或技术外，窗口天气享有上述知识产权。
\n        （2）未经窗口天气书面同意，用户不得为任何营利性或非营利性的目的自行实施、利用、转让或许可任何三方实施、利用、转让上述知识产权，窗口天气保留追究上述未经许可行为的权利。
\n        2、“软件”授权范围
\n        （1）用户可以为非商业目的在单一台终端设备上安装、使用、显示、运行本“软件”。用户不得为商业运营目的安装、使用、运行本“软件”，不可以对该软件或者该软件运行过程中释放到任何计算机终端内存中的数据及该软件运行过程中客户端与服务器端的交互数据进行复制、更改、修改、挂接运行或创作任何衍生作品，形式包括但不限于使用插件、外挂或非经授权的第三方工具/服务接入本“软件”和相关系统。
\n        （2）用户不得未经窗口天气许可，将本“软件”安装在未经窗口天气明示许可的其他终端设备上。包括但不限于机顶盒、手持设备、电话、无线上网机、游戏机、电视机、DVD 机等。
\n        （3）保留权利：未明示授权的其他一切权利仍归窗口天气所有，用户使用其他权利时须另外取得窗口天气的书面同意。\n
\n        六、其他\n
\n        1、所有有关本协议以及隐私政策的疑问、通知、要求或请求，应当用中文写作并发送至本人邮箱：【1023161984@qq.com】
\n        2、由于业务的拓展、调整或法规变化等原因，本人可能会适时修改本协议至被法律所允许的程度。我们建议您定期访查看我们的网站和移动应用程序，关注本协议的任何变化。当发生有关争议时，以最新的协议文本为准。如果不同意改动的内容，用户可以自行删除本软件。如果用户继续使用本软件，则视为您接受本协议的变动。人在法律允许最大范围内对本协议拥有解释权与修改权。
\n        3、所有有关专有权、赔偿、责任限制的条款均在协议终止后仍然有效。
\n
    </string>
</resources>