<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_edge"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_title" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="6dp"
        android:layout_height="12dp"
        android:layout_marginStart="13sp"
        android:background="@color/LightRed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="6dp"
        android:text="必须权限："
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="位置信息"
        android:textColor="@color/HalfBlack"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="6dp"
        android:text="@string/dialog_text1"
        android:textColor="@color/HalfBlack"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="存储"
        android:textColor="@color/HalfBlack"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="6dp"
        android:text="@string/dialog_text2"
        android:textColor="@color/HalfBlack"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="网络状态信息"
        android:textColor="@color/HalfBlack"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dialog_text3"
        android:textColor="@color/HalfBlack"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp">

        <TextView
            android:id="@+id/dialog_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_end"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dialog_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_end"
            android:layout_toStartOf="@id/dialog_and"
            android:text="《隐私协议》"
            android:textColor="@color/LightRed"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_end"
            android:layout_centerHorizontal="true"
            android:text="和"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dialog_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_end"
            android:layout_toEndOf="@id/dialog_and"
            android:text="《用户协议》"
            android:textColor="@color/LightRed"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/dialog_true"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="同意"
        android:textColor="@color/Blue"
        android:textSize="17sp" />

    <Button
        android:id="@+id/dialog_false"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="取消"
        android:textColor="@color/Blue"
        android:textSize="17sp" />

</LinearLayout>